change my password

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,9 +44,11 @@ body {
 }
 .listeFormation {
   color: white;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 25px;
+  /* background-color: rgba(0, 0, 0, 0.3); */
+  /* border: 1px solid rgba(0, 0, 0, 0.2); */
+  /* border-radius: 25px; */
+  /* padding: 40px; */
+  /* list-style: none; */
 }
 
 /* home Title */
