--- a/templates/programmer/addDuree.html.twig
+++ b/templates/programmer/addDuree.html.twig
@@ -4,7 +4,8 @@
 {% endblock %}
 
 {% block container %}
-	<h1>Ajouter un atelier à la Session</h1>
+	<h1>Les Ateliers de la Session de Formation</h1>
+	<p>Ajouter un ou plusieurs ateliers à une session ou modifier les selon vos besoins.</p>
 
 	{# simplement afficher le formulaire #}
 	{# {{ form(formAddAteliers) }} #}
