change user password

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -33,7 +33,7 @@
 	</table>
 
 	{# button(s) #}
-	<a href="{{ path('change_password') }}" style="text-decoration: none;">Changer le mot de passe</a>
+	<a href="{{ path('update_password') }}" style="text-decoration: none;">Changer le mot de passe</a>
 
 	<h2>Vos prochaines sessions de formations</h2>
 	{# sessions #}
