--- a/templates/session/show.html.twig
+++ b/templates/session/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Informations sur la session
+{% block title %}Informations sur la Session
 {% endblock %}
 
 {% block container %}
-	<h1>Informations sur la session de Formation</h1>
+	<h1>Informations sur la Session de Formation</h1>
 
 	{# détails #}
 	<table class="table">
