--- a/templates/security/resetPassword.html.twig
+++ b/templates/security/resetPassword.html.twig
@@ -5,11 +5,18 @@
 	Mot de passe
 {% endblock %}
 
+
 {% block container %}
+	<h2 class="text-center" style="color:white;">Mot de passe oublié</h2>
+	<div
+		class="littleForm">
 
-	{# formulaire nouveau mot de passe #}
-	{{ form(form)}}
+		{# formulaire nouveau mot de passe #}
+		{{ form(form)}}
 
-		<a href="{{ path('app_login')}}" style="color:white;">Retour à la connexion</a>
+			<a href="{{ path('app_login')}}" style="color:white;">Retour à la connexion</a>
+
+		</div>
+
 
 	{% endblock %}
