--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,32 +4,34 @@
 {% endblock %}
 
 {% block container %}
-	<form class="loginForm" method="post">
-		{% if error %}
-			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-		{% endif %}
+	<div class="littleForm">
+		<form class="loginForm" method="post">
+			{% if error %}
+				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+			{% endif %}
 
-		{% if app.user %}
-			<div class="mb-3">
-				{{ app.user.username |capitalize }}, vous êtes déjà connecté.
-				<a href="{{ path('app_logout') }}">Déconnexion</a>
-			</div>
-		{% endif %}
+			{% if app.user %}
+				<div class="mb-3">
+					{{ app.user.username |capitalize }}, vous êtes déjà connecté.
+					<a href="{{ path('app_logout') }}">Déconnexion</a>
+				</div>
+			{% endif %}
 
-		<h1 class="text-center">Connexion</h1>
-		<label for="inputEmail">Email</label>
-		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-		<label for="inputPassword">Mot de passe</label>
-		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+			<h1 class="text-center">Connexion</h1>
+			<label for="inputEmail">Email</label>
+			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+			<label for="inputPassword">Mot de passe</label>
+			<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-		<input
-		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+			<input
+			type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-		{# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality. See https://symfony.com/doc/current/security/remember_me.html <div class="checkbox mb-3"><label><input type="checkbox" name="_remember_me"> Remember me</label></div>#}
+			{# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality. See https://symfony.com/doc/current/security/remember_me.html <div class="checkbox mb-3"><label><input type="checkbox" name="_remember_me"> Remember me</label></div>#}
 
-		<button class="btn btn-secondary" style="margin-top: 15px !important;" type="submit">
-			Envoyer
-		</button>
-	</form>
-	<a href="{{ path('forgotten_password') }}" style="color:white;">Mot de passe oublié ?</a>
+			<button class="btn btn-secondary" style="margin-top: 15px !important;" type="submit">
+				Envoyer
+			</button>
+		</form>
+		<a href="{{ path('forgotten_password') }}" style="color:white;">Mot de passe oublié ?</a>
+	</div>
 {% endblock %}
