--- a/templates/security/updatePassword.html.twig
+++ b/templates/security/updatePassword.html.twig
@@ -6,6 +6,9 @@
 {% endblock %}
 
 {% block container %}
-
-	{# formulaire nouveau mot de passe #}
-	{{ form(form)}}{% endblock %}
+	<div class="littleForm" style="color:black;">
+		<h2 class="text-center">Changer le Mot de Passe</h2>
+		{# formulaire nouveau mot de passe #}
+		{{ form(form)}}
+		</div>
+	{% endblock %}
