--- a/templates/session/show.html.twig
+++ b/templates/session/show.html.twig
@@ -51,7 +51,7 @@
 		</tbody>
 	</table>
 	<button class="btn btn-primary">
-		<a href="{{path('addAtelierToSession', {id: session.id})}}" style="color:white; text-decoration: none;">Ajouter un Atelier</a>
+		<a href="{{path('addAtelierToSession', {id: session.id})}}" style="color:white; text-decoration: none;">Programmer</a>
 	</button>
 
 	{# participants #}
