--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -27,19 +27,24 @@
 							{{ formation.description }}
 						</p>
 					</td>
-					<td>
-						<a href="{{ path('formation_edit', {id: formation.id}) }}">Editer</a>
-					</td>
-					<td>
-						<a href="{{ path('formation_delete', {id: formation.id}) }}">Supprimer</a>
-					</td>
+					{% if is_granted("ROLE_ADMIN") %}
+						<td>
+							<a href="{{ path('formation_edit', {id: formation.id}) }}">Editer</a>
+						</td>
+						<td>
+							<a href="{{ path('formation_delete', {id: formation.id}) }}">Supprimer</a>
+						</td>
+					{% endif %}
 				</tr>
 			{% endfor %}
 		</tbody>
 	</table>
 
 	{# button #}
-	<button class="btn btn-primary">
-		<a href="{{ path('formation_add') }}" style="color:white; text-decoration: none;">Ajouter une formation</a>
-	</button>
+
+	{% if is_granted("ROLE_ADMIN") %}
+		<button class="btn btn-primary">
+			<a href="{{ path('formation_add') }}" style="color:white; text-decoration: none;">Ajouter une formation</a>
+		</button>
+	{% endif %}
 {% endblock %}
