--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,11 +44,6 @@ body {
 }
 .listeFormation {
   color: white;
-  /* background-color: rgba(0, 0, 0, 0.3); */
-  /* border: 1px solid rgba(0, 0, 0, 0.2); */
-  /* border-radius: 25px; */
-  /* padding: 40px; */
-  /* list-style: none; */
 }
 
 /* home Title */
@@ -110,6 +105,11 @@ form {
 .littleForm {
   width: 65%;
   margin: auto;
+}
+.littleForm textarea {
+  border: none !important;
+  background-color: rgb(110, 110, 110) !important;
+  color: white !important;
 }
 .text-muted {
   color: black !important;
