--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -55,6 +55,9 @@
 								<li class="nav-item">
 									<a class="nav-link" href="{{path('liste_formations')}}">Les formations</a>
 								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="{{path('contact')}}">Contact</a>
+								</li>
 							</ul>
 						</div>
 					</nav>
