--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -7,6 +7,13 @@
 	<h1 class="text-center">Liste des Formations</h1>
 	<p>Cliquez sur une formation pour avoir plus d'informations.</p>
 
+	{# add button #}
+	{% if is_granted("ROLE_ADMIN") %}
+		<button class="btn btn-primary myButton">
+			<a href="{{ path('formation_add') }}" class="myButton">Ajouter une formation</a>
+		</button>
+	{% endif %}
+
 	{# table formations #}
 	<table class="table">
 		<thead>
@@ -40,11 +47,4 @@
 		</tbody>
 	</table>
 
-	{# button #}
-
-	{% if is_granted("ROLE_ADMIN") %}
-		<button class="btn btn-primary">
-			<a href="{{ path('formation_add') }}" style="color:white; text-decoration: none;">Ajouter une formation</a>
-		</button>
-	{% endif %}
 {% endblock %}
