--- a/templates/session/new.html.twig
+++ b/templates/session/new.html.twig
@@ -9,7 +9,18 @@
 	{% else %}
 		<h1>Ajout d'une Session</h1>
 	{% endif %}
-
+	{# addFlash message #}
+	<div>
+		{% for label, flashes in app.session.flashbag.all %}
+			{% for flash in flashes %}
+				{% if ( label == 'error' ) %}
+					<div class="alert alert-danger alert-dismissible fade show">
+						{{ flash }}
+					</div>
+				{% endif %}
+			{% endfor %}
+		{% endfor %}
+	</div>
 	{# début du contenu du formulaire #}
 	{{form_start(formAddSession)}}
 
