--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,3 +164,9 @@ footer {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
 }
+
+.filter {
+  display: block;
+  position: sticky;
+  top: 20px;
+}
